# splitty

./: .gitignore  Cargo.toml  docker-compose.yml  secrets.enc.env
migrations/: 20260513134831_create_initial_tables.down.sql  20260513134831_create_initial_tables.up.sql
src/: application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  party.rs
src/application/: commands.rs  error.rs  ports.rs
src/application/commands/: add_expense.rs  finish_party.rs  include_member.rs  start_party.rs
src/application/ports/: party_repository.rs
src/domain/: party.rs
src/infrastructure/: db.rs
src/infrastructure/persistence/: postgres.rs
src/infrastructure/persistence/postgres/: party_repository_sqlx.rs
src/infrastructure/transport/: telegram.rs
src/infrastructure/transport/telegram/: command.rs
